...
                        <constraint firstAttribute="width" constant="220" id="gCF-ta-EMr"/>
                        <constraint firstAttribute="width" secondItem="p9Y-NK-z1Q" secondAttribute="height" multiplier="1:1" id="tIy-R8-nic"/>
                    </constraints>
                </imageView>
                <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="C35-iA-nq7">
                    <rect key="frame" x="277" y="327" width="40" height="40"/>
                    <accessibility key="accessibilityConfiguration" identifier="edit"/>
                    <constraints>
                        <constraint firstAttribute="height" constant="40" id="2L5-0N-tBf"/>
                        <constraint firstAttribute="width" constant="40" id="XXV-cS-tYn"/>
                    </constraints>
                    <fontDescription key="fontDescription" type="system" weight="semibold" pointSize="16"/>
                    <inset key="imageEdgeInsets" minX="0.0" minY="0.0" maxX="2.2250738585072014e-308" maxY="0.0"/>
...
                        <color key="titleColor" name="buttonTitle"/>
                    </state>
                </button>
                <textField opaque="NO" contentMode="scaleToFill" enabled="NO" contentHorizontalAlignment="left" contentVerticalAlignment="center" textAlignment="center" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="W26-pQ-q4b">
                    <rect key="frame" x="204" y="383" width="6" height="30"/>
                    <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                    <accessibility key="accessibilityConfiguration" identifier="name"/>
                    <constraints>
                        <constraint firstAttribute="height" constant="30" id="B2L-4F-c66"/>
                    </constraints>
                    <fontDescription key="fontDescription" type="boldSystem" pointSize="24"/>
                    <textInputTraits key="textInputTraits"/>
                </textField>
                <textField opaque="NO" contentMode="scaleToFill" enabled="NO" contentHorizontalAlignment="left" contentVerticalAlignment="center" textAlignment="center" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="Z63-nQ-afj">
                    <rect key="frame" x="204.5" y="445" width="5" height="21"/>
                    <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                    <accessibility key="accessibilityConfiguration" identifier="info"/>
                    <constraints>
                        <constraint firstAttribute="height" constant="21" id="rWT-kq-SKC"/>
                    </constraints>
                    <fontDescription key="fontDescription" type="system" pointSize="16"/>
                    <textInputTraits key="textInputTraits"/>
                </textField>
                <textField opaque="NO" contentMode="scaleToFill" enabled="NO" contentHorizontalAlignment="left" contentVerticalAlignment="center" textAlignment="center" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="HL0-Go-4Qm">
                    <rect key="frame" x="204.5" y="466" width="5" height="21"/>
                    <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                    <accessibility key="accessibilityConfiguration" identifier="location"/>
                    <constraints>
                        <constraint firstAttribute="height" constant="21" id="CmJ-4R-mTB"/>
                    </constraints>
                    <fontDescription key="fontDescription" type="system" pointSize="16"/>
                    <textInputTraits key="textInputTraits"/>
                </textField>
...
