...
	}()
		
	// MARK: - Lifecycle

	override func viewDidLoad() {
		super.viewDidLoad()
		title = "Channels"
		setUpRightBarItem()
		presenter?.viewDidLoad()
		addTargets()
		setUpTableView()
		setUpLeftBarItem()
		delegating()
...
		leftBarButton.backgroundColor = .clear
		navigationItem.leftBarButtonItem = UIBarButtonItem(customView: leftBarButton)
	}

	private func setUpRightBarItem() {
		let resizeImage = UIImage.textImage(text: "FN")?.resize(width: barButtonSize, height: barButtonSize)
		rightBarButton.accessibilityIdentifier = "profile"
		rightBarButton.setImage(resizeImage, for: .normal)
		rightBarButton.clipsToBounds = true
		rightBarButton.layer.masksToBounds = true
		navigationItem.rightBarButtonItem = UIBarButtonItem(customView: rightBarButton)
	}
	
...
